--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
-PORT=27017
-# MONGO_URI=mongodb+srv://testdummy:rMxacClFW0txcf2t@cluster0.xyffdf4.mongodb.net/?retryWrites=true&w=majority
-SECRET=SECRETPASSWORD
-MONGO_URI=mongodb://127.0.0.1:27017/techConnects
+NODE_ENV=development
+PORT=3000
+
+# SECRET=NII8XZP6b1vp4gZe0UttDwpO1VIipxF+Fq+kqXyDISI=
+
+MONGODB_URI=mongodb://127.0.0.1:27017/techConnects
 MONGODB_DB=techConnects
