--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,22 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.10",
+    "@mui/material": "^5.14.17",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "@mui/x-date-pickers": "^6.18.1",
+    "@syncfusion/ej2-react-schedule": "^23.1.44",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "stream-chat": "^8.12.1",
     "stream-chat-react": "^10.12.0",
+    "styled-components": "^6.1.1",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
