--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/interaction": "^6.1.9",
+    "@fullcalendar/list": "^6.1.9",
+    "@fullcalendar/timegrid": "^6.1.9",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.10",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,17 +17,16 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.5.0",
-    "head": "^1.0.0",
     "md5": "^2.3.0",
     "moment": "^2.29.4",
-    "next": "^14.0.2",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.8.0",
     "redux": "^4.2.1",
