--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/core": "^6.1.9",
@@ -16,7 +17,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
-    "firebase": "^10.5.0",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^10.6.0",
     "md5": "^2.3.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
