--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.5",
     "@mui/x-data-grid": "^6.16.2",
+    "@mui/x-date-pickers": "^6.18.1",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "firebase": "^10.4.0",
     "pusher": "^5.1.3",
+    "styled-components": "^6.1.1",
     "talkjs": "^0.16.6"
   }
 }
