--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/x-date-pickers": "^6.18.1",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.0.6",
     "firebase": "^10.4.0",
     "pusher": "^5.1.3",
     "styled-components": "^6.1.1",
